# Thai-Text-Segmenter-System

./: .gitattributes  .gitignore  README.md  generate_presentation.py  package-lock.json  session-ses_2b73.md  setup-backend.ps1  test.html  thesis_presentation.pptx  ~$thesis_presentation.pptx
backend/: README.md  app.py  main.py  pyproject.toml  requirement.txt.txt  requirements.txt  reset_password.py  setup.py
backend/data/: test.json  test.txt
backend/data/training_exports/: training_20260220_212944.json  training_20260220_213004.json  training_20260220_213031.json  training_20260220_215537.json  training_20260224_002320.json  training_20260224_002335.json  training_20260224_002403.json  training_20260224_002422.json  training_20260224_200439.json  training_20260224_205725.json  training_20260224_205809.json  training_20260224_210301.json  training_20260224_211206.json  (+33 more)
backend/database/: users.db
backend/learned_data/: enhanced_training_data.json  frequency_data.json
backend/models/: lst20_dictionary.pkl  mtu_crf_model.pkl  syllable_crf_model.pkl
backend/results/: README.md  evaluation_results.json  mtu_results.json  pos_results.json  syllable_results.json  word_seg_results.json
backend/routers/: auth.py  nlp.py  process_html.py  roles.py  stats.py  users.py
backend/schemas/: role.py  user.py
backend/scripts/: complete_pipeline.py  crf_mtu_inference.py  crf_mtu_trainer.py  lst20_dictionary_builder.py  pos_tagger_trainer.py  syllable.py  syllable_trainer.py  word_segmentation.py
backend/utils/: database.py  training_data_manager.py
docs/: index.html
(+9581 files in other folders)
